--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,12 @@ body {
 header {
     background-color: #122932;
     color: #ffffff;
-    padding: 2%;
     font-size: 2em;
+    padding-top: 10px;
 }
 
 h1 {
     font-family: 'Homemade Apple', sans-serif;
-    font-size: 3em;
     text-shadow: 4px 4px 4px #ffffff;
     text-align: center;
     color: #ff5d73;
@@ -24,12 +23,13 @@ header p {
     text-align: center;
 }
 
-nav {
-    background-color: #ff5d73;
-}
-
 nav ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #ff5d73;
+    text-align: center;
 }
 
 nav li {
@@ -39,6 +39,7 @@ nav li {
 
 nav a {
     color: white;
+    padding: 20px;
 }
 
 nav a:hover {
