--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ button {
     cursor: pointer;
     padding: 20px;
     margin: 10px;
-    border: outset;
     border-radius: 8px;
 }
 
@@ -50,6 +49,7 @@ button img {
 article {
     padding: 18px;
     background-image: url('../img/graph.png');
+    border-radius: 8px;
 }
 
 .hidden {
