--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html,body {
 body {
     background-color: #8BAAAD;
     font-family: 'Abel', sans-serif;
-    font-size: 1.5em;
 }
 
 h1 {
@@ -31,7 +30,6 @@ nav .active {
 }
 
 button {
-    font-size: 1em;
     cursor: pointer;
     padding: 20px;
     margin: 10px;
@@ -46,4 +44,24 @@ article {
 
 .hidden {
     display: none;
+}
+
+/* responsively size viewpoints carousel text for larger views (>800px) */
+@media screen and (min-width: 801px) {
+    h1 {
+        font-size: 4rem;
+    }
+    body {
+        font-size: 1.5rem;
+    }
+}
+
+  /* responsively size viewpoints carousel text for smaller views (<=800px) */
+@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 2rem;
+    }
+    body {
+        font-size: 0.75rem;
+    }
 }
