--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ nav ul {
 
 nav li {
   padding: 10px;
+  cursor: pointer;
 }
 
 nav li:hover {
@@ -31,8 +32,13 @@ button {
   border-radius: 8px;
 }
 
+.card {
+  cursor: pointer;
+}
+
+
 .card:hover {
-  background-color: #DDDDED;
+  background-color: #f4f4fc;
 }
 
 article {
